--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -60,8 +60,7 @@ deploy:
     tag: ${APPVEYOR_REPO_TAG_NAME}
     release: ${_RELEASE_NAME}-${_RELEASE_VERSION}
     artifact: ${_RELEASE_NAME}-${_RELEASE_VERSION}
-    auth_token:
-      secure: SXUyBqg8+wl9fn3xHV2Br0xDH65EyPAnFwJbwcg94wIesv9osQEefC3zxu9iDTUh
+    auth_token: ${_GH_DEPLOYMENT_TOKEN}
     on:
       branch: master
       _IS_BUILD_CANARY: false
@@ -72,8 +71,7 @@ deploy:
     artifact: ${_RELEASE_NAME}-${_RELEASE_VERSION}
     prerelease: true
     force_update: true
-    auth_token:
-      secure: SXUyBqg8+wl9fn3xHV2Br0xDH65EyPAnFwJbwcg94wIesv9osQEefC3zxu9iDTUh
+    auth_token: ${_GH_DEPLOYMENT_TOKEN}
     on:
       branch: master
       _IS_BUILD_CANARY: true
